<resources>
    <string name="app_name">LDR ulgamy</string>
    <string name="percent0">0%</string>
    <string name="percent25">25%</string>
    <string name="percent50">50%</string>
    <string name="percent75">75%</string>
    <string name="percent100">100%</string>
    <string name="light">Çyra</string>
    <string name="dimmer">DIMMER</string>
    <string name="intensity">Ýagtylandyryş</string>
    <string name="ldr">LDR</string>
    <string name="_0">0%</string>
    <string name="version">Version 1.01</string>
    <string name="designed_by_wolf_squad">designed by Wolf Squad</string>
    <string name="ip_address">IP salgysy</string>
    <string name="ip">198.168.43.10</string>
    <string name="success">Üstünlikli</string>
    <string name="fit">Boşlugy dolduryň!</string>
    <string name="settings">Sazlamalar</string>
    <string name="save">Ýatda sakla</string>
    <string name="mode">Mode</string>
    <string name="internet">Internet birikmesi ýola goýuldy</string>
    <string name="brightness">LDR ulgamy aktiw ýagdaýda</string>
</resources>